# AUV-Biota-Laut

./: .gitignore  README.md
PoC/: camera.py  camera_test.py  data_collector.py  decrypt.py  dummy_provider.py  encrypt_poc.py  unified_data.csv
PoC/nyoba_github/: ngotret_modeldatasetfinal3_testyologambar_masukfolder.py
PoC/yolo11/kode keseluruhan/: POC2_testyologambar_masukfolder.py  ngotret1_3preproces_adaptivept2_hasilnilaipre.py  ngotret_modeldatasetfinal_testyolowebcam_masukfolder_adajeda.py  ngotret_testyologambar_masukfolder.py  opencvgacor_dasar.py
PoC/yolo11n/: ngotret_modeldatasetfinal3_testyolovideo_masukfolder.py  ngotret_modeldatasetfinal3_testyolowebcam_masukfolder_adajeda.py
PoC/yolo11n/kode keseluruhan/: POC2_testyologambar_masukfolder.py  membuat grid area.py  ngotret_modeldatasetfinal_testyolovideo_masukfolder.py  ngotret_modeldatasetfinal_testyolowebcam_masukfolder_adajeda.py  ngotret_testyologambar_masukfolder.py  opencvgacor_dasar.py
src/area_check/: areaCheck.cpp
src/area_setup/cpp/: areaSetup.cpp
src/area_setup/python/: areaSetup.py
src/biota_detection/: biotaDetection.py
src/coordinate_transmit/: tcp_streamer.py
src/data_acquisition/: CMakeLists.txt
src/data_acquisition/cpp/: dataAcquisition.cpp
src/data_acquisition/python/: lightControl.py
src/database/: biota.db  biota_encrypted.db  biota_export.json  data.txt  data_test.cpp  database.cpp  database.h  jetson.db  main_database.cpp  main_database.launch  setup.json  socket_test.cpp
src/database_sim/: main_store_sim.py
src/gui/: gather_navs_sensors.py  gui_node_smaller.py
src/gui/gb_msgs/: CMakeLists.txt  package.xml
src/gui/gb_msgs/msg/: DynamicsState.msg  Gps.msg  Gui.msg  Spatial.msg  Valeport_Altimeter.msg
src/kamera_preprocess_yolo_jetson/: nyoba_kameraperiodik_preprocess_yolo.py
src/main_detection/: areaCheck.py  areaSetup.py  auv_sim.py  biotaDetection.py  biota_encrypted.db  dataAcquisition.py  db_insert_times.csv  imageStorage.py  main_detection.py  preProcess.py  setup.json
src/preprocess/: preProcess.py
(+56 files in other folders)
